signup ui screen completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/images/onboarding/
     - assets/icons/onboarding/
+    - assets/icons/login/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
