--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   intl_phone_field: ^3.2.0
   equatable: ^2.0.7
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
