--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/onboarding/
+    - assets/images/home/
     - assets/icons/onboarding/
     - assets/icons/parent/
     - assets/icons/login/
