--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   equatable: ^2.0.7
   pin_code_fields: ^8.0.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ flutter:
   assets:
     - assets/images/onboarding/
     - assets/images/home/
+    - assets/images/details/
     - assets/icons/onboarding/
     - assets/icons/parent/
     - assets/icons/login/
