referral link screen ui complete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/icons/parent/
     - assets/icons/login/
     - assets/icons/settings/
+    - assets/icons/referral/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
