--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.7
   pin_code_fields: ^8.0.1
   flutter_rating_bar: ^4.0.1
+  better_player_plus: ^1.0.8
 
 dev_dependencies:
   flutter_test:
